fixed bug where profile was overflowing to friends side bar

--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -52,12 +52,15 @@ $red-2: #be4b49;
 
 // Breakpoints
 $medium-small: 768px;
+$medium-small-2: 876px; 
 $medium-width: 901px;
 $medium-width-2: 923px;
 $medium-large-width: 1075px;
 $medium-large-width-2: 1100px;
 $large-transition: 1259px;
 $large: 1260px;
+$very-large: 1280px;
+
 
 
 $shadow-1: rgba(0, 0, 0, 0.1);
