--- a/app/assets/stylesheets/components/friends/friends_layout.scss
+++ b/app/assets/stylesheets/components/friends/friends_layout.scss
@@ -24,5 +24,16 @@
     right: 0;
     bottom: 0;
     min-width: 50rem;
+
   }
+
+  @media (max-width: $very-large) {
+    .profile-posts-layout {
+      justify-content: flex-start;
+    }
+
+  }
+
 }
+
+
